update setup.cfg and remove database.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,7 @@ author = Tobias HT
 author_email = higenyi.tobias@gmail.com
 description = A table based python database
 url = https://github.com/ht-thomas/kozesaDBLite
+
+[options]
+package_dir = 
+	= kdblite
