--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,7 @@ url = https://github.com/ht-thomas/kozesaDBLite
 [options]
 package_dir = 
 	= kdblite
+python_requires = >=3.8
+packages = find:
+[options.packages.find]
+where = kdblite
