created src folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,6 @@ url = https://github.com/ht-thomas/kozesaDBLite
 
 [options]
 package_dir = 
-	= kdblite
+	= src
 python_requires = >=3.8
-packages = find:
-[options.packages.find]
-where = kdblite
+packages = [kdblite]
