--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,7 @@ url = https://github.com/ht-thomas/kozesaDBLite
 package_dir = 
 	= src
 python_requires = >=3.8
-packages = kdblite
+packages = find:
+
+[options.packages.find]
+where = src
